--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
